<resources>
    <string name="app_name">Tour The Past</string>
    <string name="app_version">1.0</string>
    <string name="app_year">2016</string>
    <string name="app_copyright">ShaBit</string>
    //admob
    <string name="banner_ad_unit_id"></string>

    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_favorite">Favorites</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Drawer Items -->
    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_section_header">Section Header</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_favorites">Favorites</string>

    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_favorite">Favorite Places</string>
    <string name="recipes">Historical Places</string>
    <string name="favorites">Favorite Places</string>


    //Settings theme
    <string-array name="pref_theme_options">
        <item>Green</item>
        <item>Carrot</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Indigo</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>@string/pref_theme_value_indigo</item>
        <item>@string/pref_theme_value_carrot</item>
        <item>@string/pref_theme_value_blue</item>
        <item>@string/pref_theme_value_brown</item>
        <item>@string/pref_theme_value_gray</item>
        <item>@string/pref_theme_value_green</item>
        <item>@string/pref_theme_value_red</item>
        <item>@string/pref_theme_value_yellow</item>
    </string-array>

    <string name="pref_green_theme">pref_green_theme</string>
    <string name="pref_theme">pref_theme</string>
    <string name="pref_theme_title">Theme</string>

    <string name="pref_theme_value_indigo">indigo</string>
    <string name="pref_theme_value_carrot">carrot</string>
    <string name="pref_theme_value_blue">blue</string>
    <string name="pref_theme_value_brown">brown</string>
    <string name="pref_theme_value_gray">gray</string>
    <string name="pref_theme_value_green">green</string>
    <string name="pref_theme_value_red">red</string>
    <string name="pref_theme_value_yellow">yellow</string>
    <string name="change_theme">Change Theme</string>

    <string name="settings_acknow">Acknowledgements</string>
    <string name="settings_terms">Terms of use</string>
    <string name="settings_header_about">About</string>
    <string name="settings_version">Version</string>

    //Dialog Exit
    <string name="confirm_exit">Are you sure you want to exit?</string>
    <string name="positive">Yes</string>
    <string name="negative">No</string>

    //Dialog Loading
    <string name="progress_title">Loading</string>
    <string name="progress_content">Please wait</string>

    //Snack bar - No internet
    <string name="nonet1">No internet connection!</string>

    <string name="activity_detail_content_recipe_title">Place Description</string>
    <string name="activity_detail_content_ingredients_title">Main Contributor</string>
    <string name="activity_detail_content_nutritions_title">Nutritions</string>

</resources>
