<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <PreferenceCategory
        android:key="settings_theme"
        android:title="@string/change_theme">
        <ListPreference
            android:defaultValue="@string/pref_theme_value_green"
            android:entries="@array/pref_theme_options"
            android:entryValues="@array/pref_theme_values"
            android:key="@string/pref_theme"
            android:title="@string/pref_theme_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="header_about"
        android:title="@string/settings_header_about">

        <Preference
            android:key="settings_terms"
            android:summary=""
            android:title="@string/settings_terms" />

        <Preference
            android:key="settings_acknow"
            android:summary=""
            android:title="@string/settings_acknow" />

        <Preference
            android:key="settings_version"
            android:summary=""
            android:title="@string/settings_version" />
    </PreferenceCategory>


</PreferenceScreen>